--- a/style.css
+++ b/style.css
@@ -1,71 +1,82 @@
 body {
     margin: 0;
+    height: 100vh; /* لضبط ارتفاع الخلفية مع الشاشة بالكامل */
+    display: flex; /* يساعد في محاذاة العناصر إذا لزم الأمر */
+    justify-content: center;
+    align-items: center;
     background-color: hsla(0, 51%, 33%, 0.644);
     background-image: url('./photo_2025-03-21_18-38-08.jpg'); /* تأكد من المسار */
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center; /* لتوسيط الخلفية */
+    background-position: center;
+    background-attachment: fixed; /* يجعل الخلفية ثابتة أثناء التمرير */
 }
 
 #login {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 200px;
+    height: auto; /* بدلاً من 200px */
     flex-direction: column;
     justify-content: space-evenly;
     margin-top: 20px;
+    background: rgba(0, 0, 0, 0.5); /* إضافة طبقة شفافة لتحسين التباين مع الخلفية */
+    padding: 20px;
+    border-radius: 10px;
 }
+
 #inputs {
     display: flex;
     flex-direction: column;
     margin: 30px 0;
 }
+
 #icons {
     margin: 30px 0;
 }
 
-#a , #b, #c {
-    
+#a, #b, #c {
     margin: 0px 10px;
 }
-#aa  {
-    margin-bottom:30px ;
+
+#aa {
+    margin-bottom: 30px;
 }
 
-#aa , #bb {
+#aa, #bb {
     border-radius: 5px;
     height: 40px;
     width: 300px;
 }
+
 #sas1 {
     color: rgb(255, 255, 255);
-    border-radius:9px;
+    border-radius: 9px;
     background-color: #AA1A1C;
-    border: solid #AA1A1C ;
+    border: solid #AA1A1C;
     width: 110px;
     height: 35px;
     margin-top: 20px;
     cursor: pointer;
-
 }
+
 #sas2 {
     color: rgb(139, 139, 139);
     border-radius: 10px;
     height: 40px;
     background-color: white;
-    border: solid white ;
+    border: solid white;
     width: 170px;
     height: 35px;
     cursor: pointer;
 }
-h1 {
-    font-size: 100px;
-    margin: 0;
-    margin-top: 30px;
-    margin-bottom: 10px;
-}
 
+h1 {
+    font-size: 50px; /* تصغير العنوان لجعل التصميم أكثر تناسقًا */
+    margin: 30px 0 10px 0;
+    text-align: center;
+    color: white;
+}
 
 #sas2:hover {
     background-color: #b3b3b3;
@@ -77,4 +88,3 @@ h1 {
     background-color: #7d1315;
     border: solid #7d1315;
 }
-
